# ralph-hook-lint

./: CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
hooks/: hooks.json
scripts/: setup.sh
src/: collect.rs  extract.rs  lint.rs  main.rs  project.rs
tests/: integration.rs
tests/fixtures/go/monorepo/: go.mod
tests/fixtures/go/monorepo/modules/app/: go.mod
tests/fixtures/go/monorepo/modules/app/pkg/: lib.go
tests/fixtures/java/monorepo/: pom.xml
tests/fixtures/java/monorepo/modules/app/: pom.xml
tests/fixtures/java/monorepo/modules/app/src/main/java/: Lib.java
tests/fixtures/python/monorepo/: pyproject.toml
tests/fixtures/rust/monorepo/crates/app/src/: lib.rs
tests/fixtures/ts/monorepo/: package.json
tests/fixtures/ts/nested/: package.json
tests/fixtures/ts/nested/subproject/: package.json
