[package]
name = "ralph-hook-lint"
version = "0.1.0"
edition = "2024"

[dependencies]

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Remove unwinding code
strip = true        # Strip symbols
