[package]
name = "ralph-hook-lint"
version = "0.11.0"
edition = "2024"
rust-version = "1.85"

[dependencies]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
opt-level = 3       # Optimize for speed
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization
panic = "abort"     # Remove unwinding code
strip = true        # Strip symbols
